--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "classlist.js": "^1.1.20150312",
     "express": "^4.15.2",
     "feather-icons": "^4.26.0",
+    "file-saver": "^2.0.5",
     "flag-icons": "^2.0.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
@@ -55,6 +56,7 @@
     "screenfull": "^5.0.1",
     "tslib": "^1.10.0",
     "web-animations-js": "^2.3.2",
+    "xlsx": "^0.16.9",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
