Product edit completely fixed, added new component: scrollers.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mousetrap": "^1.6.5",
     "ng-animate": "^0.3.4",
     "ng-chartist": "^4.1.0",
+    "ng-multiselect-dropdown": "^0.3.7",
     "ng2-charts": "^2.3.0",
     "ng2-completer": "^3.0.3",
     "ng2-google-charts": "^5.0.0",
