--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ngx-dropzone-wrapper": "^8.0.0",
     "ngx-owl-carousel-o": "^2.0.3",
     "ngx-slimscroll": "^8.1.0",
+    "ngx-ui-switch": "^12.0.1",
     "rxjs": "~6.5.4",
     "screenfull": "^5.0.1",
     "tslib": "^1.10.0",
