--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "flag-icons": "^2.0.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
     "mousetrap": "^1.6.5",
     "ng-animate": "^0.3.4",
     "ng-chartist": "^4.1.0",
